--- a/public/style.css
+++ b/public/style.css
@@ -493,3 +493,7 @@ input[type=text].invalid {
   will-change: left, right;
   -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
   animation: indeterminate 3.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite; }
+
+.toast-info {
+  background-color: #a1887f;
+  color: #f9f8f2 !important; }
