chore(profile) fix redirect users to dashboard - redirect users to dashboard page - show error after input validation [Delivers #148958671]

--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -288,7 +288,7 @@ input[type=text].invalid {
   color: #a1887f !important;
   font-family: 'Fjalla One', sans-serif;
 }
-.comfirmPasswordStatus{
+.validatorContainer{
     display: block;
     content: "";
     position: absolute;
