feat(admin) manage users - create action to block users - creeate action to restore users - create action to get users [Delivers #feat/148960069/adminmanageuser]

--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -89,7 +89,7 @@ button {
   bottom: 0px
 }
 .extraDiv {
-  padding: 50px
+  padding: 60px
 }
 .welcomeDiv {
   color:#a1887f;
@@ -365,6 +365,9 @@ input[type=text].invalid {
 #spanRole {
   color: #ED7810 !important;
   float: right;
+  margin-top: 20px;
+  margin-left: -200px;
+  font-size: 10px;
 }
 #spanRole i {
   display: inline !important ;
