--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -14,6 +14,7 @@ body {
   font-family: 'Abril Fatface', cursive;
   font-family: 'Abel', sans-serif;
   background-color: #ffffff;
+  font-size: 12px;
 }
 
 button, i {
@@ -28,6 +29,9 @@ td  a {
   font-family: 'Roboto', sans-serif;
   font-family: 'Oswald', sans-serif;
   font-family: 'Fresca', sans-serif;
+}
+td.tooltip {
+  padding-top: 25px !important;
 }
 td  button {
   color: #ED7810 !important;
@@ -73,6 +77,7 @@ button {
 #logoImg {
   height: 30px;
   width: 30px;
+  margin-right: 10px;
 }
 .mainHeader {
   position: fixed;
@@ -180,6 +185,7 @@ input[type=text].invalid {
 .pagination li.active a {
   color: #fff !important;
   background-color: #a1887f !important;
+  cursor: pointer;
 }
 
 .pagination li a {
@@ -187,7 +193,7 @@ input[type=text].invalid {
   font-family: 'Josefin Sans', sans-serif;
   text-transform: capitalize
 }
-.info {
+.no-record {
   color: #a1887f !important;
   padding: 10%;
 }
@@ -245,7 +251,7 @@ input[type=text].invalid {
   color: #000;
   padding-right: 5px;
   text-transform: capitalize;
-  font-size: 14px;
+  font-size: 12px;
   margin-top: 0px
 }
 #title {
@@ -379,7 +385,7 @@ input[type=text].invalid {
 #spanRole {
   color: #ED7810 !important;
   float: right;
-  margin-top: 20px;
+  margin-top: 15px;
   margin-left: -200px;
   font-size: 10px;
 }
@@ -402,4 +408,12 @@ input[type=text].invalid {
 }
 button#btnDownload {
   margin-bottom: 10px;
+}
+
+#noDoc {
+ padding: 10px !important;;
+}
+
+.role {
+  margin-top: -5px;
 }
